public/stylesheets/profile.css
*{
	box-sizing:border-box;
}
html { font-size: 1.25em; }
h1, h2, h3, h4{
	font-family: 'Oswald', sans-serif;
	font-weight: normal;
}
p, h5, h6, label, li{
	font-family: 'Roboto', sans-serif;
}

h1 { font-size: 3.3em; }

h2 { font-size: 2.7em; }

h3 { font-size: 2.2em; }

h4 { font-size: 1.8em; }
h5 { font-size: .8em; }

h6 { font-size: .6em; }
p,a { font-size: 1em; }

em { font-size: 1.5em; }

.imgIcon{
	height: 1.5em;
	width: 1.5em;	
}
nav{
	display: inline-block;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1000;
	width: 100%;
	height: 3em;
	background-color: #193D5A;
}
nav ul{
	list-style: none;
	float:right;
	overflow: hidden;
}
nav ul li{
	padding-left: 2em;
	display:inline;
}
nav ul li a{
	color:white;
	text-decoration: none;
	padding:.75em;
	border-top:4px transparent;
	border-bottom:4px transparent;
}
nav ul li a.active{
	color:#FFDEB1;
	/*border-top:2px solid white;*/
	border-bottom:3px solid #FFDEB1;
}
.spacing{
	height:3em;
}
section {
	width: 100%;
	min-height: 100vh;
	padding-top:3em;
	/*margin-top: 1em;*/
}
.container{
	/*max-width: 1280px;*/
	width: 85%;
	margin: 0px auto;
}
.home{
	background-color: #80C6E7;
	color:#193D5A;
}
.social p{
	margin: 0em 12%;
}
.social p a{
	text-decoration: none;
	text-align: center;
	display:inline-block;
	width: 25%;
	padding: 1em 0em;
	margin: 1em 12%;
	background-color: white;
	color:#193D5A;
}
.about{
	background-color: #FFDEB1;
	/*color:white;*/
	color: #193D5A;
}
.about h3{
	color: #193D5A;
	padding:1em 0em 0em 0em;
	margin:.5em 0em .5em 1em;
}
.about ul{
	list-style: none;
}
.about li{
	line-height: 1.5em;
}
.about ul, .about li{
	margin:0;
	margin-left:1em;
	padding:0;
}
.portfolio{
	background-color: white;
	color:#193D5A;
}
.portfolio h3{
	line-height: 1.5em;
	margin-top: 0em;
	margin-bottom:0em;
	padding:0em 36px;
}
.portfolio h3 a{
	color:#193D5A;
	text-decoration: none;
}
.portfolio p{
	padding: 0em 36px;
}

.contact{
	background-color:#740000;
	color:white;
}
.contact input, .contact textarea{
	background-color: white;
	color: #193D5A;
}

.contact input{
	height: 48px;
}
.contact textarea{
	height: 96px;
	margin-bottom: 48px;
}

.card{
	width: 100%;
	overflow:hidden;
	margin-top:2em;
	max-height: 500px;
}
.card:last-child{
	padding-bottom: 1em;
}
.card img{
	width: 33%;
	display: inline-block;
	vertical-align: top;
}
.card div{
	width: 66%;
	display: inline-block;
	vertical-align: top;
	padding-top: 0em;
}
.half{
	display:inline-block;
	width:49%;
	vertical-align: top;
	padding:1em 0em;
}
.onethird{
	display:inline-block;
	width:50px;
	vertical-align: top;
	padding:.2em;
	text-align: center
}
.twoThird{
	display:inline-block;
	width:69%;
	vertical-align: top;
	padding:.2em;
}
label{
	display: inline-block;
	width: 100%;
	/*font-size: 2em;*/
	margin-top: 1em;
}
input, textarea{
	width: 100%;
}

.tribute{
	background-color: mintcream;
}

